# kdot

./: Cargo.toml  LICENSE  README.md  kdot.json
src/: config.rs  main.rs  module.rs  path.rs  symlink.rs
stuff/bash/: .bashrc
tests/: cli.rs
