[package]
name = "kdot"
version = "0.1.2"
authors = ["Kyle Pfromer <kpfromer2@gmail.com>"]
edition = "2018"
description = "An Archdot file manager."
repository = "https://github.com/kpfromer/kdot/"
license = "MIT"
keywords = ["CLI", "dot-files", "arch"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
anyhow = "1.0"
walkdir = "2"
pathdiff = "0.2.0"
log = "0.4"
simplelog = "0.9.0"
path-clean = "0.1.0"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"